--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
                 <!-- CodeIgniter 4 -->
                 <div class="col-md-4 my-3">
-                    <img src="Codeigniter.png" alt="CodeIgniter 4" class="img-fluid skill-icon">
+                    <img src="CodeIgniter.png" alt="CodeIgniter 4" class="img-fluid skill-icon">
                     <h5 class="mt-3">CodeIgniter 4</h5>
                     <p>Framework como herramienta de trabajo para proyectos eficientes y escalables.</p>
                 </div>
