--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <p>Experiencia en bases de datos NoSQL para aplicaciones escalables.</p>
                 </div>
                 <div class="col-12 col-md-4 my-3">
-                    <img src="html.jpg" alt="HTML" class="img-fluid skill-icon">
+                    <img src="Html.jpg" alt="HTML" class="img-fluid skill-icon">
                     <h5 class="mt-3">HTML</h5>
                     <p>Amplia experiencia en la creación de estructuras semánticas y accesibles para aplicaciones web.</p>
                 </div>
@@ -113,7 +113,7 @@
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
                     <div class="card h-100 shadow-sm">
-                        <img src="codeigniter4.jpg" class="card-img-top" alt="Proyecto 1">
+                        <img src="CodeIgniter.png" class="card-img-top" alt="Proyecto 1">
                         <div class="card-body">
                             <h5 class="card-title">Sistema de Inscripción de Alumnos</h5>
                             <p class="card-text">Desarrollé un sistema donde los alumnos pueden inscribirse a materias, gestionadas por docentes, utilizando PHP y MySQL.</p>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100 shadow-sm">
-                        <img src="python1.png" class="card-img-top" alt="Proyecto 2">
+                        <img src="Python.png" class="card-img-top" alt="Proyecto 2">
                         <div class="card-body">
                             <h5 class="card-title">Matriz de Incidencia</h5>
                             <p class="card-text">Desarrollé scripts en Python para generar al azar una matriz de incidencia arista-vértice, de 7 × 6, para la representación de un grafo no dirigido.</p>
@@ -133,7 +133,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100 shadow-sm">
-                        <img src="codeigniter4.jpg" class="card-img-top" alt="Proyecto 3">
+                        <img src="CodeIgniter.png" class="card-img-top" alt="Proyecto 3">
                         <div class="card-body">
                             <h5 class="card-title">Gestión de Gym</h5>
                             <p class="card-text">Sistema de gestión para gimnasios con registro de usuarios, instructores y turnos, desarrollado con PHP y MySQL.</p>
