--- a/index.html
+++ b/index.html
@@ -37,50 +37,52 @@
             </div>
         </nav>
     </header>
-    
+
+    <!-- Home Section -->
     <section id="home" class="container my-5 pt-5" style="background: linear-gradient(to right, #f0f0f0, #ffffff); padding: 60px 0; border-radius: 15px;">
         <div class="row align-items-center">
-            <div class="col-12 col-md-6">
+            <div class="col-lg-6">
                 <h1 class="text-primary" style="font-size: 3rem; font-weight: bold; margin-bottom: 20px;">Facundo Simeoni</h1>
                 <p style="font-size: 1.2rem; line-height: 1.8; color: #333;">Soy un Desarrollador de Software especializado en crear soluciones inteligentes para aplicaciones web. Apasionado por la tecnología y siempre en busca de nuevos desafíos para innovar y crecer.</p>
             </div>
-            <div class="col-12 col-md-6 text-center">
-                <img src="devel.jpg" alt="Facundo Simeoni" class="img-fluid shadow-lg" style="max-width: 100%; border-radius: 10px;">
+            <div class="col-lg-6 text-center">
+                <img src="devel.jpg" alt="Facundo Simeoni" class="img-fluid shadow-lg" style="width: 70%; border-radius: 10px;">
             </div>
         </div>
     </section>
 
+    <!-- Skills Section -->
     <section id="skills" class="bg-light py-5">
         <div class="container">
             <h2 class="text-center mb-5">Skills</h2>
             <div class="row text-center">
-                <div class="col-12 col-md-4 my-3">
+                <div class="col-6 col-md-4 my-3">
                     <img src="PHP.png" alt="PHP" class="img-fluid skill-icon">
                     <h5 class="mt-3">PHP</h5>
                     <p>Experiencia en desarrollo de aplicaciones backend con PHP en varios proyectos.</p>
                 </div>
-                <div class="col-12 col-md-4 my-3">
+                <div class="col-6 col-md-4 my-3">
                     <img src="MySQL.png" alt="MySQL" class="img-fluid skill-icon">
                     <h5 class="mt-3">MySQL</h5>
                     <p>Manejo de bases de datos relacionales, diseño y optimización de consultas.</p>
                 </div>
-                <div class="col-12 col-md-4 my-3">
+                <div class="col-6 col-md-4 my-3">
                     <img src="CodeIgniter.png" alt="CodeIgniter 4" class="img-fluid skill-icon">
                     <h5 class="mt-3">CodeIgniter 4</h5>
                     <p>Framework como herramienta de trabajo para proyectos eficientes y escalables.</p>
                 </div>
-                <div class="col-12 col-md-4 my-3">
+                <div class="col-6 col-md-4 my-3">
                     <img src="Python.png" alt="Python" class="img-fluid skill-icon">
                     <h5 class="mt-3">Python</h5>
                     <p>Conocimiento básico y experiencia en proyectos de automatización y análisis de datos.</p>
                 </div>
-                <div class="col-12 col-md-4 my-3">
+                <div class="col-6 col-md-4 my-3">
                     <img src="MongoDB.png" alt="MongoDB" class="img-fluid skill-icon">
                     <h5 class="mt-3">MongoDB</h5>
                     <p>Experiencia en bases de datos NoSQL para aplicaciones escalables.</p>
                 </div>
-                <div class="col-12 col-md-4 my-3">
-                    <img src="Html.jpg" alt="HTML" class="img-fluid skill-icon">
+                <div class="col-6 col-md-4 my-3">
+                    <img src="html.jpg" alt="HTML" class="img-fluid skill-icon">
                     <h5 class="mt-3">HTML</h5>
                     <p>Amplia experiencia en la creación de estructuras semánticas y accesibles para aplicaciones web.</p>
                 </div>
@@ -88,14 +90,15 @@
         </div>
     </section>
 
+    <!-- Sobre mí Section -->
     <section id="about-me" class="py-5">
         <div class="container">
             <h2 class="text-center mb-5">Sobre mí</h2>
             <div class="row align-items-center">
-                <div class="col-12 col-md-4 text-center mb-4">
+                <div class="col-md-4 text-center mb-4">
                     <img src="yo.jpeg" alt="Sobre mí" class="img-fluid rounded-circle shadow-lg" width="250" height="250">
                 </div>
-                <div class="col-12 col-md-8">
+                <div class="col-md-8">
                     <p>
                         Soy Técnico Superior en Desarrollo de Software con una gran pasión por la tecnología. Me encanta enfrentar nuevos desafíos y encontrar soluciones creativas para mejorar procesos y crear aplicaciones eficientes.
                     </p>
@@ -107,10 +110,12 @@
         </div>
     </section>
 
+    <!-- Proyectos Section -->
     <section id="projects" class="bg-light py-5">
         <div class="container">
             <h2 class="text-center mb-5">Proyectos</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <!-- Proyecto 1 -->
                 <div class="col">
                     <div class="card h-100 shadow-sm">
                         <img src="CodeIgniter.png" class="card-img-top" alt="Proyecto 1">
@@ -121,6 +126,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- Proyecto 2 -->
                 <div class="col">
                     <div class="card h-100 shadow-sm">
                         <img src="Python.png" class="card-img-top" alt="Proyecto 2">
@@ -131,6 +137,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- Proyecto 3 -->
                 <div class="col">
                     <div class="card h-100 shadow-sm">
                         <img src="CodeIgniter.png" class="card-img-top" alt="Proyecto 3">
@@ -145,11 +152,21 @@
         </div>
     </section>
 
-    <section id="contact" class="py-5"> <div class="container"> <h2 class="text-center mb-5">Contacto</h2> <div class="row justify-content-center"> <div class="col-md-6 text-center"> <a href="tel:+542646293463" class="btn btn-golden w-100 mb-3">Número de teléfono</a> <a href="mailto:facundosimeoni1@gmail.com" class="btn btn-golden w-100 mb-3">Correo electrónico</a> <a href="https://www.google.com/maps/place/San+Juan,+Argentina" target="_blank" class="btn btn-golden w-100 mb-3">Ubicación</a> <a href="https://www.linkedin.com/in/facundosimeoni" target="_blank" class="btn btn-golden w-100 mb-3">LinkedIn</a> <a href="facundo_cv.pdf" target="_blank" class="btn btn-golden w-100 mb-3">Currículum Vitae</a> </div> </div> </div> </section> 
-
-    <footer class="bg-dark text-light text-center py-3">
-        <p>© 2024 Facundo Simeoni. Todos los derechos reservados.</p>
-    </footer>
+    <!-- Contacto Section -->
+    <section id="contact" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-5">Contacto</h2>
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-6 text-center">
+                    <a href="tel:+542646293463" class="btn btn-golden w-100 mb-3">Número de teléfono</a>
+                    <a href="mailto:facundosimeoni1@gmail.com" class="btn btn-golden w-100 mb-3">Correo electrónico</a>
+                    <a href="https://www.google.com/maps/place/San+Juan,+Argentina" target="_blank" class="btn btn-golden w-100 mb-3">Ubicación</a>
+                    <a href="https://www.linkedin.com/in/facundosimeoni" target="_blank" class="btn btn-golden w-100 mb-3">LinkedIn</a>
+                    <a href="facundo_cv.pdf" target="_blank" class="btn btn-golden w-100 mb-3">Curriculum Vitae</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
