--- a/index.html
+++ b/index.html
@@ -39,17 +39,20 @@
     </header>
 
     <!-- Home Section -->
-    <section id="home" class="container my-5 pt-5" style="background: linear-gradient(to right, #f0f0f0, #ffffff); padding: 60px 0; border-radius: 15px;">
-        <div class="row align-items-center">
-            <div class="col-lg-6">
-                <h1 class="text-primary" style="font-size: 3rem; font-weight: bold; margin-bottom: 20px;">Facundo Simeoni</h1>
-                <p style="font-size: 1.2rem; line-height: 1.8; color: #333;">Soy un Desarrollador de Software especializado en crear soluciones inteligentes para aplicaciones web. Apasionado por la tecnología y siempre en busca de nuevos desafíos para innovar y crecer.</p>
-            </div>
-            <div class="col-lg-6 text-center">
-                <img src="devel.jpg" alt="Facundo Simeoni" class="img-fluid shadow-lg" style="width: 70%; border-radius: 10px;">
-            </div>
+<section id="home" class="container my-5 pt-5" style="background: linear-gradient(to right, #f0f0f0, #ffffff); padding: 60px 0; border-radius: 15px;">
+    <div class="row align-items-center">
+        <div class="col-lg-6">
+            <h1 class="text-primary" style="font-size: 3rem; font-weight: bold; margin-bottom: 20px;">Software Developer</h1>
+            <p style="font-size: 1.2rem; line-height: 1.8; color: #333;">
+                Apasionado por la tecnología, creando soluciones innovadoras para aplicaciones web. Siempre en busca de nuevos desafíos que me permitan crecer y contribuir a proyectos significativos.
+            </p>
         </div>
-    </section>
+        <div class="col-lg-6 text-center">
+            <img src="devel.jpg" alt="Facundo Simeoni" class="img-fluid shadow-lg" style="width: 70%; border-radius: 10px;">
+        </div>
+    </div>
+</section>
+
 
     <!-- Skills Section -->
     <section id="skills" class="bg-light py-5">
