--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
         </nav>
     </header>
 
-    <!-- Home Section -->
 <section id="home" class="container my-5 pt-5" style="background: linear-gradient(to right, #f0f0f0, #ffffff); padding: 60px 0; border-radius: 15px;">
     <div class="row align-items-center">
         <div class="col-lg-6">
@@ -53,8 +52,6 @@
     </div>
 </section>
 
-
-    <!-- Skills Section -->
     <section id="skills" class="bg-light py-5">
         <div class="container">
             <h2 class="text-center mb-5">Skills</h2>
@@ -93,7 +90,6 @@
         </div>
     </section>
 
-    <!-- Sobre mí Section -->
     <section id="about-me" class="py-5">
         <div class="container">
             <h2 class="text-center mb-5">Sobre mí</h2>
@@ -113,12 +109,10 @@
         </div>
     </section>
 
-    <!-- Proyectos Section -->
     <section id="projects" class="bg-light py-5">
         <div class="container">
             <h2 class="text-center mb-5">Proyectos</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-                <!-- Proyecto 1 -->
                 <div class="col">
                     <div class="card h-100 shadow-sm">
                         <img src="CodeIgniter.png" class="card-img-top" alt="Proyecto 1">
@@ -129,7 +123,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- Proyecto 2 -->
+
                 <div class="col">
                     <div class="card h-100 shadow-sm">
                         <img src="Python.png" class="card-img-top" alt="Proyecto 2">
@@ -140,7 +134,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- Proyecto 3 -->
+
                 <div class="col">
                     <div class="card h-100 shadow-sm">
                         <img src="CodeIgniter.png" class="card-img-top" alt="Proyecto 3">
@@ -155,7 +149,6 @@
         </div>
     </section>
 
-    <!-- Contacto Section -->
     <section id="contact" class="py-5">
         <div class="container">
             <h2 class="text-center mb-5">Contacto</h2>
@@ -164,8 +157,8 @@
                     <a href="tel:+542646293463" class="btn btn-golden w-100 mb-3">Número de teléfono</a>
                     <a href="mailto:facundosimeoni1@gmail.com" class="btn btn-golden w-100 mb-3">Correo electrónico</a>
                     <a href="https://www.google.com/maps/place/San+Juan,+Argentina" target="_blank" class="btn btn-golden w-100 mb-3">Ubicación</a>
-                    <a href="https://www.linkedin.com/in/facundosimeoni" target="_blank" class="btn btn-golden w-100 mb-3">LinkedIn</a>
-                    <a href="facundo_cv.pdf" target="_blank" class="btn btn-golden w-100 mb-3">Curriculum Vitae</a>
+                    <a href="www.linkedin.com/in/facundosimeoni" target="_blank" class="btn btn-golden w-100 mb-3">LinkedIn</a>
+                    <a href="cv_simeoni.pdf" target="_blank" class="btn btn-golden w-100 mb-3">Curriculum Vitae</a>
                 </div>
             </div>
         </div>
