--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <a href="tel:+542646293463" class="btn btn-golden w-100 mb-3">Número de teléfono</a>
                     <a href="mailto:facundosimeoni1@gmail.com" class="btn btn-golden w-100 mb-3">Correo electrónico</a>
                     <a href="https://www.google.com/maps/place/San+Juan,+Argentina" target="_blank" class="btn btn-golden w-100 mb-3">Ubicación</a>
-                    <a href="www.linkedin.com/in/facundosimeoni" target="_blank" class="btn btn-golden w-100 mb-3">LinkedIn</a>
+                    <a href="https://linkedin.com/in/facundosimeoni" target="_blank" class="btn btn-golden w-100 mb-3">LinkedIn</a>
                     <a href="cv_simeoni.pdf" target="_blank" class="btn btn-golden w-100 mb-3">Curriculum Vitae</a>
                 </div>
             </div>
