--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio de Facundo Simeoni</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.css">
 </head>
 <body>
     <header>
@@ -150,20 +152,45 @@
     </section>
 
     <section id="contact" class="py-5">
-        <div class="container">
-            <h2 class="text-center mb-5">Contacto</h2>
-            <div class="row justify-content-center">
-                <div class="col-12 col-md-6 text-center">
-                    <a href="tel:+542646293463" class="btn btn-golden w-100 mb-3">Número de teléfono</a>
-                    <a href="mailto:facundosimeoni1@gmail.com" class="btn btn-golden w-100 mb-3">Correo electrónico</a>
-                    <a href="https://www.google.com/maps/place/San+Juan,+Argentina" target="_blank" class="btn btn-golden w-100 mb-3">Ubicación</a>
-                    <a href="https://linkedin.com/in/facundosimeoni" target="_blank" class="btn btn-golden w-100 mb-3">LinkedIn</a>
-                    <a href="cv_simeoni.pdf" target="_blank" class="btn btn-golden w-100 mb-3">Curriculum Vitae</a>
-                </div>
+    <div class="container">
+        <h2 class="text-center mb-5">Contacto</h2>
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6 text-center">
+                <a href="tel:+542646293463" class="btn btn-golden w-100 mb-3">
+                    <i class="fas fa-phone-alt"></i> Número de teléfono
+                </a>
+                <a href="mailto:facundosimeoni1@gmail.com" class="btn btn-golden w-100 mb-3">
+                    <i class="fas fa-envelope"></i> Correo electrónico
+                </a>
+                <a href="https://www.google.com/maps/place/San+Juan,+Argentina" target="_blank" class="btn btn-golden w-100 mb-3">
+                    <i class="fas fa-map-marker-alt"></i> Ubicación
+                </a>
+                <a href="https://linkedin.com/in/facundosimeoni" target="_blank" class="btn btn-golden w-100 mb-3">
+                    <i class="fab fa-linkedin"></i> LinkedIn
+                </a>
+                <a href="cv_simeoni.pdf" target="_blank" class="btn btn-golden w-100 mb-3">
+                    <i class="fas fa-file-alt"></i> Curriculum Vitae
+                </a>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+			<a href="#" class="btn btn-secondary" id="back-to-top" style="display: none;">↑</a>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    
+    <script>
+        const backToTopButton = document.getElementById('back-to-top');
+        window.onscroll = function () {
+            if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
+                backToTopButton.style.display = "block";
+            } else {
+                backToTopButton.style.display = "none";
+            }
+        };
+        backToTopButton.onclick = function () {
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+        };
+    </script>
 </body>
 </html>
