--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <a href="https://linkedin.com/in/facundosimeoni" target="_blank" class="btn btn-golden w-100 mb-3">
                     <i class="fab fa-linkedin"></i> LinkedIn
                 </a>
-                <a href="cv_simeoni.pdf" target="_blank" class="btn btn-golden w-100 mb-3">
+                <a href="cv_simeoni_prog.pdf" target="_blank" class="btn btn-golden w-100 mb-3">
                     <i class="fas fa-file-alt"></i> Curriculum Vitae
                 </a>
             </div>
