--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
                         <img src="CodeIgniter.png" class="card-img-top" alt="Proyecto 3">
                         <div class="card-body">
                             <h5 class="card-title">Gestión de Gym</h5>
-                            <p class="card-text">Sistema de gestión para gimnasios con registro de usuarios, instructores y turnos, desarrollado con PHP y MySQL.</p>
-                            <a href="https://github.com/facusime/gestion_gym.git" class="btn btn-primary">Ver Proyecto</a>
+                            <p class="card-text">Sistema de gestión para gimnasios con registro de usuarios, instructores y turnos, desarrollado con PHP y MySQL.</p> Usuario: Facu12 <br> Contraseña:1234
+                            <a href="https://practica5.iesmbelgranosj.edu.ar/forwardtech/public/" class="btn btn-primary">Ver Proyecto</a>
                         </div>
                     </div>
                 </div>
