--- a/index.html
+++ b/index.html
@@ -101,10 +101,13 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Soy Técnico Superior en Desarrollo de Software con una gran pasión por la tecnología. Me encanta enfrentar nuevos desafíos y encontrar soluciones creativas para mejorar procesos y crear aplicaciones eficientes.
+                        Soy un Desarrollador de Software con formación en desarrollo web, bases de datos y frameworks como CodeIgniter. Mi experiencia incluye la creación de aplicaciones web utilizando tecnologías como HTML, CSS, PHP, Python, MySQL y MongoDB. Además, cuento con conocimientos en testing, sistemas operativos (Windows y Linux) y redes, lo que me permite abordar proyectos de manera integral y eficiente.
                     </p>
                     <p>
-                        Tengo experiencia en desarrollo web utilizando PHP, HTML, Python, MySQL, y bases de datos NoSQL como MongoDB. También cuento con habilidades en automatización con Python y diseño de prototipos. Soy proactivo, trabajo bien en equipo y me gusta aprender de forma autodidacta.
+                        Durante mi formación en la Tecnicatura Superior en Desarrollo de Software, he trabajado en proyectos como un sistema de gestión de inventarios y una aplicación de registro de actividades, donde apliqué metodologías ágiles y herramientas de diseño como Figma. También tengo experiencia en atención al cliente y ventas, lo que me ha permitido desarrollar habilidades de comunicación, trabajo en equipo y resolución de problemas.
+                    </p>
+                    <p>
+                        Mi objetivo es formar parte de un equipo dinámico donde pueda seguir creciendo profesionalmente, aportando soluciones innovadoras y aprendiendo nuevas tecnologías. Estoy abierto a oportunidades en desarrollo de software, testing, administración de sistemas o roles que combinen tecnología y atención al cliente.
                     </p>
                 </div>
             </div>
