--- a/index.html
+++ b/index.html
@@ -104,7 +104,10 @@
                         Soy un Desarrollador de Software con formación en desarrollo web, bases de datos y frameworks como CodeIgniter. Mi experiencia incluye la creación de aplicaciones web utilizando tecnologías como HTML, CSS, PHP, Python, MySQL y MongoDB. Además, cuento con conocimientos en testing, sistemas operativos (Windows y Linux) y redes, lo que me permite abordar proyectos de manera integral y eficiente.
                     </p>
                     <p>
-                        Durante mi formación en la Tecnicatura Superior en Desarrollo de Software, he trabajado en proyectos como un sistema de gestión de inventarios y una aplicación de registro de actividades, donde apliqué metodologías ágiles y herramientas de diseño como Figma. También tengo experiencia en atención al cliente y ventas, lo que me ha permitido desarrollar habilidades de comunicación, trabajo en equipo y resolución de problemas.
+                        A lo largo de mi formación, he desarrollado soluciones enfocadas en la optimización de procesos, como un sistema de inscripción académica que facilita la gestión de materias, una herramienta para la generación automática de matrices de incidencia aplicadas a la representación de grafos y una plataforma de administración para gimnasios, que mejora el control de usuarios, instructores y turnos.
+                    </p>
+                    <p>
+                        También tengo experiencia en atención al cliente y ventas, lo que me ha permitido desarrollar habilidades de comunicación, trabajo en equipo y resolución de problemas.
                     </p>
                     <p>
                         Mi objetivo es formar parte de un equipo dinámico donde pueda seguir creciendo profesionalmente, aportando soluciones innovadoras y aprendiendo nuevas tecnologías. Estoy abierto a oportunidades en desarrollo de software, testing, administración de sistemas o roles que combinen tecnología y atención al cliente.
